RESOLVED FIXED25271
Fix the build with disabled DOM storage
https://bugs.webkit.org/show_bug.cgi?id=25271
Summary Fix the build with disabled DOM storage
Laszlo Gombos
Reported 2009-04-17 13:02:40 PDT
Build failure if DOM storage is disabled; probably introduced by http://trac.webkit.org/changeset/41734 (ScriptObjectQuarantine.cpp).
Attachments
Proposed fix. (2.18 KB, patch)
2009-04-17 13:05 PDT, Laszlo Gombos
no flags
Fix disabled database support build as well (2.60 KB, patch)
2009-04-17 15:25 PDT, Laszlo Gombos
sam: review+
Revised patch based on feedback from Sam. (2.74 KB, patch)
2009-04-19 11:13 PDT, Laszlo Gombos
darin: review+
Laszlo Gombos
Comment 1 2009-04-17 13:05:44 PDT
Created attachment 29586 [details] Proposed fix.
Laszlo Gombos
Comment 2 2009-04-17 15:25:09 PDT
Created attachment 29589 [details] Fix disabled database support build as well
Sam Weinig
Comment 3 2009-04-18 22:23:24 PDT
Comment on attachment 29589 [details] Fix disabled database support build as well > Index: WebCore/bindings/js/ScriptObjectQuarantine.cpp > =================================================================== > --- WebCore/bindings/js/ScriptObjectQuarantine.cpp (revision 42609) > +++ WebCore/bindings/js/ScriptObjectQuarantine.cpp (working copy) > @@ -34,8 +34,12 @@ > #include "Database.h" > #include "Document.h" > #include "Frame.h" > +#if ENABLE(DATABASE) > #include "JSDatabase.h" > +#endif > +#if ENABLE(DOM_STORAGE) > #include "JSStorage.h" > +#endif These #if'd #includes should be moved to the bottom of the #include list (paragraphed separately) Otherwise, r=me.
Laszlo Gombos
Comment 4 2009-04-19 11:13:23 PDT
Created attachment 29607 [details] Revised patch based on feedback from Sam.
Ariya Hidayat
Comment 5 2009-04-21 06:19:40 PDT
Note You need to log in before you can comment on or make changes to this bug.