2009-04-21   Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=25271

        Fix the build with disabled DOM storage or disabled database support.

        * bindings/js/ScriptObjectQuarantine.cpp:
        * bindings/js/ScriptObjectQuarantine.h:

Canonical link: https://commits.webkit.org/34761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42709 268f45cc-cd09-0410-ab3c-d52691b4dbfc