WebCore/bindings/js/ScriptObjectQuarantine.cpp
@@ -34,8 +34,6 @@
 #include "Database.h"
 #include "Document.h"
 #include "Frame.h"
-#include "JSDatabase.h"
-#include "JSStorage.h"
 #include "JSDOMBinding.h"
 #include "JSInspectedObjectWrapper.h"
 #include "JSNode.h"
@@ -43,6 +41,14 @@
 #include "ScriptValue.h"
 
 #include <runtime/JSLock.h>
+
+#if ENABLE(DATABASE)
+#include "JSDatabase.h"
+#endif
+
+#if ENABLE(DOM_STORAGE)
+#include "JSStorage.h"
+#endif
 
 using namespace JSC;
 
@@ -54,6 +60,7 @@ ScriptValue quarantineValue(ScriptState* scriptState, const ScriptValue& value)
     return ScriptValue(JSInspectedObjectWrapper::wrap(scriptState, value.jsValue()));
 }
 
+#if ENABLE(DATABASE)
 bool getQuarantinedScriptObject(Database* database, ScriptObject& quarantinedObject)
 {
     ASSERT(database);
@@ -69,7 +76,9 @@ bool getQuarantinedScriptObject(Database* database, ScriptObject& quarantinedObj
 
     return true;
 }
+#endif
 
+#if ENABLE(DOM_STORAGE)
 bool getQuarantinedScriptObject(Frame* frame, Storage* storage, ScriptObject& quarantinedObject)
 {
     ASSERT(frame);
@@ -82,6 +91,7 @@ bool getQuarantinedScriptObject(Frame* frame, Storage* storage, ScriptObject& qu
 
     return true;
 }
+#endif
 
 bool getQuarantinedScriptObject(Node* node, ScriptObject& quarantinedObject)
 {
