WebCore/bindings/js/ScriptObjectQuarantine.h
@@ -45,8 +45,12 @@ namespace WebCore {
 
     ScriptValue quarantineValue(ScriptState*, const ScriptValue&);
 
+#if ENABLE(DATABASE)
     bool getQuarantinedScriptObject(Database* database, ScriptObject& quarantinedObject);
+#endif
+#if ENABLE(DOM_STORAGE)
     bool getQuarantinedScriptObject(Frame* frame, Storage* storage, ScriptObject& quarantinedObject);
+#endif
     bool getQuarantinedScriptObject(Node* node, ScriptObject& quarantinedObject);
     bool getQuarantinedScriptObject(DOMWindow* domWindow, ScriptObject& quarantinedObject);
 
